-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 18.0.0 (18.0 branch)
-
None
-
4ae9f705c (master)
Test steps:
1. Create a new 'Qt Quick Application' project
2. Close the project
3. Open the project using the "Open Workspace..." menu item
Result:
The project.json.user file is being generated under .qtcreator/.qtcreator. I suppose there shouldn't be extra .qtcreator folder. The file should be located in the same directory as project.json, as it is in Creator 17.