ProjectExplorer: Do not nest .qtcreator project sub-directories

Amends ab4e23c9094e9ba99ce703aee4134e1ecea07b3a.

Fixes: QTCREATORBUG-33246
Change-Id: Icceed0b68affc31e790eb6cee6e0e813f628f0b1
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: hjk <hjk@qt.io>